--- a/letter-merge.html
+++ b/letter-merge.html
@@ -49,7 +49,8 @@
       <h1 data-i18n="game.title">Letter Merge</h1>
       <p class="lead" data-i18n="game.lead">Harfleri birleştirerek ilerlediğin, hızlı ve rahatlatıcı bir bulmaca deneyimi.</p>
       <div style="display:flex; gap:12px; flex-wrap:wrap;">
-        <a class="cta" href="privacy-letter-merge.html" data-i18n="game.privacy">Gizlilik Politikası</a>
+        <a class="cta" id="play-link" href="https://play.google.com/store/apps/details?id=com.arcastudio.lettermerge" target="_blank" rel="noopener" data-i18n="game.play">Google Play</a>
+        <a href="privacy-letter-merge.html" class="muted" data-i18n="game.privacy">Gizlilik Politikası</a>
       </div>
     </section>
 
@@ -75,6 +76,7 @@
           game: {
             title: 'Letter Merge',
             lead: 'Harfleri birleştirerek ilerlediğin, hızlı ve rahatlatıcı bir bulmaca deneyimi.',
+            play: 'Google Play',
             privacy: 'Gizlilik Politikası',
             about: 'Oyun Hakkında',
             desc: 'Basit kurallar, kısa oturumlar ve artan zorluk. Letter Merge, her seviyede akışta kalmanı sağlayan yalın bir bulmaca deneyimi sunar.'
@@ -86,6 +88,7 @@
           game: {
             title: 'Letter Merge',
             lead: 'A fast and relaxing puzzle experience where you merge letters.',
+            play: 'Google Play',
             privacy: 'Privacy Policy',
             about: 'About the Game',
             desc: 'Simple rules, short sessions, and increasing challenge. Letter Merge offers a clean puzzle experience that keeps you in flow.'
