--- a/letter-merge.html
+++ b/letter-merge.html
@@ -10,10 +10,13 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://arcastudio.app/letter-merge.html">
   <meta name="theme-color" content="#0f172a">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root { --bg:#0f172a; --fg:#e2e8f0; --muted:#94a3b8; --accent:#38bdf8; --card:#111827; --border:#1f2937; }
     * { box-sizing: border-box; }
-    html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji"; line-height:1.6; }
+    html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji"; line-height:1.6; }
     a { color: var(--accent); text-decoration: none; }
     a:hover { text-decoration: underline; }
     .container { max-width: 900px; margin: 0 auto; padding: 0 20px; }
@@ -26,7 +29,8 @@
     h1 { font-size: 36px; margin: 0 0 8px; }
     .lead { color: var(--muted); margin:0 0 22px; }
     .card { background:var(--card); border:1px solid var(--border); border-radius:14px; padding:22px; }
-    .cta { display:inline-block; padding:12px 18px; border-radius:10px; background:var(--accent); color:#0b1324; font-weight:600; box-shadow:0 8px 24px rgba(56,189,248,.25); }
+    .cta { display:inline-block; padding:12px 18px; border-radius:10px; background:var(--accent); color:#0b1324; font-weight:600; box-shadow:0 8px 24px rgba(56,189,248,.25); transition: transform .15s ease, box-shadow .15s ease; }
+    .cta:hover { transform: translateY(-1px); box-shadow:0 12px 30px rgba(56,189,248,.35); }
     footer { margin-top: 40px; padding: 36px 0; border-top:1px solid var(--border); color:var(--muted); }
     @media (max-width: 900px) { h1 { font-size: 28px; } .nav-links { display:none; } }
   </style>
