--- a/letter-merge.html
+++ b/letter-merge.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root { --bg:#0f172a; --fg:#e2e8f0; --muted:#94a3b8; --accent:#38bdf8; --card:#111827; --border:#1f2937; }
+    :root[data-theme="light"] { --bg:#ffffff; --fg:#0f172a; --muted:#475569; --accent:#2563eb; --card:#ffffff; --border:#e5e7eb; }
     * { box-sizing: border-box; }
     html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji"; line-height:1.6; }
     a { color: var(--accent); text-decoration: none; }
@@ -44,7 +45,10 @@
         <a href="./index.html#oyunlar" data-i18n="nav.games">Oyunlar</a>
         <a href="./index.html#iletisim" data-i18n="nav.contact">İletişim</a>
       </nav>
-      <button class="lang" id="lang-toggle" aria-label="Dil / Language">TR</button>
+      <div style="display:flex; gap:12px;">
+        <button class="lang" id="lang-toggle" aria-label="Dil / Language">TR</button>
+        <button class="lang" id="theme-toggle" aria-label="Tema">🌙</button>
+      </div>
     </div>
   </header>
 
@@ -125,6 +129,16 @@
 
       const toggle = document.getElementById('lang-toggle');
       if (toggle) toggle.addEventListener('click', () => { current = current==='tr'?'en':'tr'; localStorage.setItem('lang', current); applyTranslations(current); });
+    })();
+  </script>
+  <script>
+    (function(){
+      const root = document.documentElement;
+      const themeBtn = document.getElementById('theme-toggle');
+      function applyTheme(t){ root.setAttribute('data-theme', t); if (themeBtn) themeBtn.textContent = t==='light'?'🌙':'☀️'; }
+      let theme = localStorage.getItem('theme') || 'dark';
+      applyTheme(theme);
+      if (themeBtn) themeBtn.addEventListener('click', ()=>{ theme = (localStorage.getItem('theme')||'dark')==='dark'?'light':'dark'; localStorage.setItem('theme', theme); applyTheme(theme); });
     })();
   </script>
   <script>
