--- a/privacy-letter-merge.html
+++ b/privacy-letter-merge.html
@@ -8,6 +8,7 @@
   <meta name="robots" content="noindex">
   <style>
     :root { --bg:#0f172a; --fg:#e2e8f0; --muted:#94a3b8; --accent:#38bdf8; --card:#111827; --border:#1f2937; }
+    :root[data-theme="light"] { --bg:#ffffff; --fg:#0f172a; --muted:#475569; --accent:#2563eb; --card:#ffffff; --border:#e5e7eb; }
     * { box-sizing: border-box; }
     html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji"; line-height:1.7; }
     a { color: var(--accent); text-decoration: none; }
@@ -35,7 +36,10 @@
         <a href="./index.html#oyunlar" data-i18n="nav.games">Oyunlar</a>
         <a href="./letter-merge.html" data-i18n="nav.letterMerge">Letter Merge</a>
       </nav>
-      <button class="lang" id="lang-toggle" aria-label="Dil / Language">TR</button>
+      <div style="display:flex; gap:12px;">
+        <button class="lang" id="lang-toggle" aria-label="Dil / Language">TR</button>
+        <button class="lang" id="theme-toggle" aria-label="Tema">🌙</button>
+      </div>
     </div>
   </header>
 
@@ -216,6 +220,16 @@
       });
       const brand = document.querySelector('.brand');
       if (brand) { brand.style.cursor = 'pointer'; brand.addEventListener('click', function(){ window.location.href = './index.html'; }); }
+    })();
+  </script>
+  <script>
+    (function(){
+      const root = document.documentElement;
+      const themeBtn = document.getElementById('theme-toggle');
+      function applyTheme(t){ root.setAttribute('data-theme', t); if (themeBtn) themeBtn.textContent = t==='light'?'🌙':'☀️'; }
+      let theme = localStorage.getItem('theme') || 'dark';
+      applyTheme(theme);
+      if (themeBtn) themeBtn.addEventListener('click', ()=>{ theme = (localStorage.getItem('theme')||'dark')==='dark'?'light':'dark'; localStorage.setItem('theme', theme); applyTheme(theme); });
     })();
   </script>
 </body>
