--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
   <script>
     (function(){
       const brand = document.querySelector('.brand');
-      if (brand) { brand.style.cursor = 'pointer'; brand.addEventListener('click', function(){ window.location.href = './index.html'; }); }
+      if (brand) { brand.style.cursor = 'pointer'; brand.addEventListener('click', function(){ window.location.href = '/'; }); }
     })();
   </script>
 </body>
