--- a/letter-merge.html
+++ b/letter-merge.html
@@ -41,9 +41,9 @@
     <div class="container nav">
       <div class="brand">ARCA STUDIO</div>
       <nav class="nav-links">
-        <a href="/about" data-i18n="nav.about">About</a>
-        <a href="/games" data-i18n="nav.games">Games</a>
-        <a href="/contact" data-i18n="nav.contact">Contact</a>
+        <a href="/#hakkimizda" data-i18n="nav.about">Hakkımızda</a>
+        <a href="/#oyunlar" data-i18n="nav.games">Oyunlar</a>
+        <a href="/#iletisim" data-i18n="nav.contact">İletişim</a>
       </nav>
       <div style="display:flex; gap:12px;">
         <button class="lang" id="lang-toggle" aria-label="Dil / Language">TR</button>
