--- a/privacy-letter-merge.html
+++ b/privacy-letter-merge.html
@@ -33,7 +33,7 @@
     <div class="container nav">
       <div class="brand">ARCA STUDIO</div>
       <nav class="nav-links">
-        <a href="/games" data-i18n="nav.games">Games</a>
+        <a href="/#oyunlar" data-i18n="nav.games">Oyunlar</a>
         <a href="/letter-merge.html" data-i18n="nav.letterMerge">Letter Merge</a>
       </nav>
       <div style="display:flex; gap:12px;">
