--- a/privacy-letter-merge.html
+++ b/privacy-letter-merge.html
@@ -33,8 +33,8 @@
     <div class="container nav">
       <div class="brand">ARCA STUDIO</div>
       <nav class="nav-links">
-        <a href="/#oyunlar" data-i18n="nav.games">Oyunlar</a>
-        <a href="/letter-merge.html" data-i18n="nav.letterMerge">Letter Merge</a>
+        <a href="./index.html#oyunlar" data-i18n="nav.games">Oyunlar</a>
+        <a href="./letter-merge.html" data-i18n="nav.letterMerge">Letter Merge</a>
       </nav>
       <div style="display:flex; gap:12px;">
         <button class="lang" id="lang-toggle" aria-label="Dil / Language">TR</button>
@@ -219,7 +219,7 @@
         setTimeout(()=>injectPolicy(next), 0);
       });
       const brand = document.querySelector('.brand');
-      if (brand) { brand.style.cursor = 'pointer'; brand.addEventListener('click', function(){ window.location.href = '/'; }); }
+      if (brand) { brand.style.cursor = 'pointer'; brand.addEventListener('click', function(){ window.location.href = './index.html'; }); }
     })();
   </script>
   <script>
